--- a/environments/development.env.example
+++ b/environments/development.env.example
@@ -2,3 +2,7 @@ PORT = 3000
 MONGO_DB = 'mongo connection string'
 JWT_SECRET = 'secret phrase'
 JWT_EXPIRES_IN = 'token lifetime'
+SENDGRID_API_KEY = ""
+EMAIL_FROM
+EMAIL_USER
+EMAIL_PASSWORD
