--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express": "4.17.1",
     "fs-extra": "^11.1.1",
     "gravatar": "^1.8.2",
+    "html-to-text": "^9.0.5",
     "jimp": "^0.22.10",
     "joi": "^17.10.1",
     "jsonwebtoken": "^9.0.2",
@@ -23,7 +24,9 @@
     "morgan": "1.10.0",
     "multer": "^1.4.5-lts.1",
     "nanoid": "^5.0.1",
+    "nodemailer": "^6.9.6",
     "path": "^0.12.7",
+    "pug": "^3.0.2",
     "sharp": "^0.32.6",
     "uuid": "^9.0.1"
   },
